<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

 <!-- /*  <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label"
    /> !!-->


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bienvenido_a"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView463"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@color/black"
        android:text="@string/mdl_register_user"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/txt_adress"
       android:layout_width="358dp"
       android:layout_height="48dp"
       android:hint="@string/adress"
       android:textColor="@color/black"
       android:textSize="17sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.49"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.512" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/txt_document"
       android:layout_width="358dp"
       android:layout_height="48dp"
       android:hint="@string/cedula"
       android:textColor="@color/black"
       android:textSize="17sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.49"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.248" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/txt_phone"
       android:layout_width="166dp"
       android:layout_height="38dp"
       android:hint="@string/telefono"
       android:textColor="@color/black"
       android:textSize="17sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.106"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.435" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/txt_email"
       android:layout_width="358dp"
       android:layout_height="48dp"
       android:hint="@string/email"
       android:textColor="@color/black"
       android:textSize="17sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.49"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.338" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/txt_password"
       android:layout_width="358dp"
       android:layout_height="48dp"
       android:hint="@string/password"
       android:textColor="@color/black"
       android:textSize="17sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.49"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.705" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/txt_last_name"
       android:layout_width="185dp"
       android:layout_height="39dp"
       android:hint="@string/apellido"
       android:textColor="@color/black"
       android:textSize="17sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.929"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.164" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/txt_name"
       android:layout_width="184dp"
       android:layout_height="40dp"
       android:hint="@string/nombre"
       android:textColor="@color/black"
       android:textSize="17sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.114"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.163" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/txt_cellphone"
       android:layout_width="179dp"
       android:layout_height="41dp"
       android:hint="@string/cellphone"
       android:textColor="@color/black"
       android:textSize="17sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.883"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.437" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/txt_user"
       android:layout_width="358dp"
       android:layout_height="48dp"
       android:hint="@string/nombre_de_usuario"
       android:textColor="@color/black"
       android:textSize="17sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.49"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.612" />

   <Button
        android:id="@+id/btn_resset_password"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="188dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/green"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <Button
        android:id="@+id/click"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/rol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <CheckBox
       android:id="@+id/checkBox2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/terms"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.142"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.887" />

</androidx.constraintlayout.widget.ConstraintLayout>